--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     <title>jsnacks</title>
 </head>
 <body>
-    <h1 class="text-capitalize">jsnacks esercizio 1</h1>
+    <h1 class="text-uppercase">jsnacks</h1>
+    <!-- ESERCIZIO 1 -->
+    <h2 class="text-capitalize mt-5">esercizio 1</h2>
+    <input id="vz_number"  class="mb-3" type="number" placeholder="inserisci un numero">
+    <button>Stampa</button>
+    <br>
+    <span></span>
 
+    <!-- ESERCIZIO 2 -->
+    <h2 class="text-capitalize mt-5">esercizio 2</h2>
     <!-- js -->
     <script src="./js/script.js"></script>
 </body>
