prova impostazione es 2

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <!-- ESERCIZIO 1 -->
     <h2 class="text-capitalize mt-5">esercizio 1</h2>
     <input id="vz_number"  class="mb-3" type="number" placeholder="inserisci un numero">
-    <button>Stampa</button>
+    <button id="stamp">Stampa</button>
     <br>
     <span></span>
 
     <!-- ESERCIZIO 2 -->
     <h2 class="text-capitalize mt-5">esercizio 2</h2>
+    <button id="list" class="text-capitalize">genera lista</button>
+    <ul></ul>
     <!-- js -->
     <script src="./js/script.js"></script>
 </body>
