--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
     <!-- ESERCIZIO 2 -->
     <h2 class="text-capitalize mt-5">esercizio 2</h2>
     <button id="list" class="text-capitalize">genera lista</button>
-    <ul></ul>
+    <ul class="mt-3"></ul>
+
+    <!-- ESERCIZIO 3 -->
+    <h2 class="text-capitalize mt-5">esercizio 3</h2>
+    <button id="calculate">Vedi somma numeri dispari</button>
+    <p id="odd-sum">La somma &egrave; </p>
+
     <!-- js -->
     <script src="./js/script.js"></script>
 </body>
