--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <!-- ESERCIZIO 3 -->
     <h2 class="text-capitalize mt-5">esercizio 3</h2>
-    <button id="calculate">Vedi somma numeri dispari</button>
-    <p id="odd-sum">La somma &egrave; </p>
+    <button id="calculate" class="mb-3">Vedi somma numeri dispari</button>
+    <p id="odd-sum"></p>
 
     <!-- js -->
     <script src="./js/script.js"></script>
