--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <button id="calculate" class="mb-3">Vedi somma numeri dispari</button>
     <p id="odd-sum"></p>
 
+    <!-- ESERCIZIO 4 -->
+    <h2 class="text-capitalize mt-5">esercizio 4</h2>
+    <p id="es4"></p>
     <!-- js -->
     <script src="./js/script.js"></script>
 </body>
